@@ -1,0 +1,26 @@
+language: python
+sudo: false
+python:
+  - 2.7
+#  - 3.4
+#  - 3.5
+#  - 3.6
+#  - pypy-5.4.1
+script:
+  - coverage run `which zope-testrunner` --test-path=src  --auto-color --auto-progress
+
+after_success:
+  - coveralls
+notifications:
+  email: false
+
+install:
+  - pip install -U pip "setuptools"
+  - pip install -U coveralls coverage
+  - pip install -U -e ".[test]"
+
+
+cache: pip
+
+before_cache:
+    - rm -f $HOME/.cache/pip/log/debug.log
