@@ -21,70 +21,80 @@ from setuptools import setup, find_packages
 def read(*rnames):
     return open(os.path.join(os.path.dirname(__file__), *rnames)).read()
 
-setup(name='zope.file',
-      version='0.6.3dev',
-      author='Zope Corporation and Contributors',
-      author_email='zope-dev@zope.org',
-      description='Efficient File Implementation for Zope Applications',
-      long_description=(
-          read('README.txt')
-          + '\n\n' +
-          '.. contents::'
-          + '\n\n' +
-          read('src', 'zope', 'file', 'README.txt')
-          + '\n\n' +
-          read('src', 'zope', 'file', 'download.txt')
-          + '\n\n' +
-          read('src', 'zope', 'file', 'upload.txt')
-          + '\n\n' +
-          read('src', 'zope', 'file', 'contenttype.txt')
-          + '\n\n' +
-          read('src', 'zope', 'file', 'browser.txt')
-          + '\n\n' +
-          read('CHANGES.txt')
-          ),
-      keywords = "zope3 web html ui file pattern",
-      classifiers = [
-          'Development Status :: 5 - Production/Stable',
-          'Environment :: Web Environment',
-          'Intended Audience :: Developers',
-          'License :: OSI Approved :: Zope Public License',
-          'Programming Language :: Python',
-          'Natural Language :: English',
-          'Operating System :: OS Independent',
-          'Topic :: Internet :: WWW/HTTP',
-          'Framework :: Zope3'],
-      url='http://cheeseshop.python.org/pypi/zope.file',
-      license='ZPL 2.1',
-      packages=find_packages('src'),
-      package_dir = {'': 'src'},
-      namespace_packages=['zope'],
-      extras_require = dict(
-          test=['zope.app.testing',
-                'zope.app.zcmlfiles',
-                'zope.login',
-                'zope.password',
-                'zope.securitypolicy',
-                'zope.testbrowser']),
-     install_requires=['setuptools',
-                       'ZODB3',
-                       'zope.component>=3.8',
-                       'zope.browser',
-                       'zope.container',
-                       'zope.contenttype>=3.5',
-                       'zope.event',
-                       'zope.filerepresentation',
-                       'zope.formlib>=4',
-                       'zope.i18nmessageid',
-                       'zope.lifecycleevent',
-                       'zope.interface',
-                       'zope.location',
-                       'zope.mimetype',
-                       'zope.publisher',
-                       'zope.schema',
-                       'zope.security',
-                       'zope.size',
-                       ],
-      include_package_data = True,
-      zip_safe = False,
-      )
+setup(
+    name='zope.file',
+    version='0.6.3dev',
+    author='Zope Corporation and Contributors',
+    author_email='zope-dev@zope.org',
+    description='Efficient File Implementation for Zope Applications',
+    long_description=(
+        read('README.txt')
+        + '\n\n' +
+        '.. contents::'
+        + '\n\n' +
+        read('src', 'zope', 'file', 'README.txt')
+        + '\n\n' +
+        read('src', 'zope', 'file', 'download.txt')
+        + '\n\n' +
+        read('src', 'zope', 'file', 'upload.txt')
+        + '\n\n' +
+        read('src', 'zope', 'file', 'contenttype.txt')
+        + '\n\n' +
+        read('src', 'zope', 'file', 'browser.txt')
+        + '\n\n' +
+        read('CHANGES.txt')
+    ),
+    keywords="zope3 web html ui file pattern",
+    classifiers=[
+        'Development Status :: 5 - Production/Stable',
+        'Environment :: Web Environment',
+        'Intended Audience :: Developers',
+        'License :: OSI Approved :: Zope Public License',
+        'Programming Language :: Python',
+        'Programming Language :: Python:: 2 :: Only',
+        'Programming Language :: Python:: 2.7',
+        'Programming Language :: Python :: Implementation :: CPython',
+        'Natural Language :: English',
+        'Operating System :: OS Independent',
+        'Topic :: Internet :: WWW/HTTP',
+        'Framework :: Zope3'
+    ],
+    url='http://cheeseshop.python.org/pypi/zope.file',
+    license='ZPL 2.1',
+    packages=find_packages('src'),
+    package_dir={'': 'src'},
+    namespace_packages=['zope'],
+    extras_require=dict(
+        test=[
+            'zope.app.testing',
+            'zope.app.zcmlfiles',
+            'zope.login',
+            'zope.password',
+            'zope.securitypolicy',
+            'zope.testbrowser>5',
+            'zope.testrunner',
+        ]
+    ),
+    install_requires=[
+        'setuptools',
+        'ZODB3',
+        'zope.component>=3.8',
+        'zope.browser',
+        'zope.container',
+        'zope.contenttype>=3.5',
+        'zope.event',
+        'zope.filerepresentation',
+        'zope.formlib>=4',
+        'zope.i18nmessageid',
+        'zope.lifecycleevent',
+        'zope.interface',
+        'zope.location',
+        'zope.mimetype>=2.1',
+        'zope.publisher',
+        'zope.schema',
+        'zope.security',
+        'zope.size',
+    ],
+    include_package_data=True,
+    zip_safe=False,
+)
