@@ -19,9 +19,17 @@ import unittest
 
 from zope.file import testing
 
+
 def fromDocFile(path):
     suite = testing.FunctionalBlobDocFileSuite(path)
     suite.layer = testing.ZopeFileLayer
+    return suite
+
+
+def fromBrowserFile(path):
+    globs = {'getRootFolder': testing.BrowserLayer.getRootFolder}
+    suite = testing.FunctionalBlobDocFileSuite(path, globs=globs)
+    suite.layer = testing.BrowserLayer
     return suite
 
 def test_suite():
@@ -29,7 +37,7 @@ def test_suite():
         doctest.DocFileSuite("README.txt"),
         doctest.DocFileSuite("browser.txt"),
         fromDocFile("adapters.txt"),
-        fromDocFile("contenttype.txt"),
+        fromBrowserFile('contenttype.txt'),
         fromDocFile("download.txt"),
         fromDocFile("upload.txt"),
         ))
