@@ -5,8 +5,10 @@ CHANGES
 0.6.3 (unreleased)
 ------------------
 
-- Remove unneeded test dependencies zope.app.server and zope.app.component
-
+- Remove unneeded test dependencies zope.app.server and
+  zope.app.component
+- Test on Travis CI. Only Python 2.7 is supported.
+- Update to work with zope.testbrowser 5.
 
 0.6.2 (2012-06-04)
 ------------------
